// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Movies
    addFavorite={[Function]}
    favorites={
        Array [
            Object {
              "backdrop_path": "/def.jpg",
              "favorite": true,
              "movie_id": 999,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/abs.jpg",
              "release_date": "2017-10-27",
              "title": "Thor",
              "vote_average": 7.2,
            },
          ]
    }
    movies={
        Array [
            Object {
              "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
              "favorite": false,
              "movie_id": 354912,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
              "release_date": "2017-10-27",
              "title": "Coco",
              "vote_average": 7.7,
            },
            Object {
              "backdrop_path": "/def.jpg",
              "favorite": true,
              "movie_id": 999,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/abs.jpg",
              "release_date": "2017-10-27",
              "title": "Thor",
              "vote_average": 7.2,
            },
          ]
    }
    removeFavorite={[Function]}
    updateMovies={[Function]}
    user={
        Object {
            "email": "fake@123.com",
            "id": 2,
            "name": "ted",
            "password": "pw123",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <MovieCard
          movie={
                    Object {
                              "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
                              "favorite": false,
                              "movie_id": 354912,
                              "overview": "Despite his family’s baffling generations-old ban on music",
                              "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
                              "release_date": "2017-10-27",
                              "title": "Coco",
                              "vote_average": 7.7,
                            }
          }
          onFavorite={[Function]}
/>,
        <MovieCard
          movie={
                    Object {
                              "backdrop_path": "/def.jpg",
                              "favorite": true,
                              "movie_id": 999,
                              "overview": "Despite his family’s baffling generations-old ban on music",
                              "poster_path": "/abs.jpg",
                              "release_date": "2017-10-27",
                              "title": "Thor",
                              "vote_average": 7.2,
                            }
          }
          onFavorite={[Function]}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "354912",
        "nodeType": "function",
        "props": Object {
          "movie": Object {
            "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
            "favorite": false,
            "movie_id": 354912,
            "overview": "Despite his family’s baffling generations-old ban on music",
            "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
            "release_date": "2017-10-27",
            "title": "Coco",
            "vote_average": 7.7,
          },
          "onFavorite": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1000",
        "nodeType": "function",
        "props": Object {
          "movie": Object {
            "backdrop_path": "/def.jpg",
            "favorite": true,
            "movie_id": 999,
            "overview": "Despite his family’s baffling generations-old ban on music",
            "poster_path": "/abs.jpg",
            "release_date": "2017-10-27",
            "title": "Thor",
            "vote_average": 7.2,
          },
          "onFavorite": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <MovieCard
            movie={
                        Object {
                                    "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
                                    "favorite": false,
                                    "movie_id": 354912,
                                    "overview": "Despite his family’s baffling generations-old ban on music",
                                    "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
                                    "release_date": "2017-10-27",
                                    "title": "Coco",
                                    "vote_average": 7.7,
                                  }
            }
            onFavorite={[Function]}
/>,
          <MovieCard
            movie={
                        Object {
                                    "backdrop_path": "/def.jpg",
                                    "favorite": true,
                                    "movie_id": 999,
                                    "overview": "Despite his family’s baffling generations-old ban on music",
                                    "poster_path": "/abs.jpg",
                                    "release_date": "2017-10-27",
                                    "title": "Thor",
                                    "vote_average": 7.2,
                                  }
            }
            onFavorite={[Function]}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "354912",
          "nodeType": "function",
          "props": Object {
            "movie": Object {
              "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
              "favorite": false,
              "movie_id": 354912,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
              "release_date": "2017-10-27",
              "title": "Coco",
              "vote_average": 7.7,
            },
            "onFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1000",
          "nodeType": "function",
          "props": Object {
            "movie": Object {
              "backdrop_path": "/def.jpg",
              "favorite": true,
              "movie_id": 999,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/abs.jpg",
              "release_date": "2017-10-27",
              "title": "Thor",
              "vote_average": 7.2,
            },
            "onFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Movies when user favorites a card and is not logged in, page redirects to login 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Movies
    addFavorite={[Function]}
    favorites={
        Array [
            Object {
              "backdrop_path": "/def.jpg",
              "favorite": true,
              "movie_id": 999,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/abs.jpg",
              "release_date": "2017-10-27",
              "title": "Thor",
              "vote_average": 7.2,
            },
          ]
    }
    history={
        Object {
            "action": "PUSH",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "zqx71f",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              Object {
                "hash": "",
                "key": "mttltz",
                "pathname": "/login",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 1,
            "length": 2,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "mttltz",
              "pathname": "/login",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
    }
    movies={
        Array [
            Object {
              "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
              "favorite": false,
              "movie_id": 354912,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
              "release_date": "2017-10-27",
              "title": "Coco",
              "vote_average": 7.7,
            },
            Object {
              "backdrop_path": "/def.jpg",
              "favorite": true,
              "movie_id": 999,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/abs.jpg",
              "release_date": "2017-10-27",
              "title": "Thor",
              "vote_average": 7.2,
            },
          ]
    }
    removeFavorite={[Function]}
    updateMovies={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <MovieCard
          movie={
                    Object {
                              "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
                              "favorite": false,
                              "movie_id": 354912,
                              "overview": "Despite his family’s baffling generations-old ban on music",
                              "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
                              "release_date": "2017-10-27",
                              "title": "Coco",
                              "vote_average": 7.7,
                            }
          }
          onFavorite={[Function]}
/>,
        <MovieCard
          movie={
                    Object {
                              "backdrop_path": "/def.jpg",
                              "favorite": true,
                              "movie_id": 999,
                              "overview": "Despite his family’s baffling generations-old ban on music",
                              "poster_path": "/abs.jpg",
                              "release_date": "2017-10-27",
                              "title": "Thor",
                              "vote_average": 7.2,
                            }
          }
          onFavorite={[Function]}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "354912",
        "nodeType": "function",
        "props": Object {
          "movie": Object {
            "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
            "favorite": false,
            "movie_id": 354912,
            "overview": "Despite his family’s baffling generations-old ban on music",
            "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
            "release_date": "2017-10-27",
            "title": "Coco",
            "vote_average": 7.7,
          },
          "onFavorite": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1000",
        "nodeType": "function",
        "props": Object {
          "movie": Object {
            "backdrop_path": "/def.jpg",
            "favorite": true,
            "movie_id": 999,
            "overview": "Despite his family’s baffling generations-old ban on music",
            "poster_path": "/abs.jpg",
            "release_date": "2017-10-27",
            "title": "Thor",
            "vote_average": 7.2,
          },
          "onFavorite": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <MovieCard
            movie={
                        Object {
                                    "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
                                    "favorite": false,
                                    "movie_id": 354912,
                                    "overview": "Despite his family’s baffling generations-old ban on music",
                                    "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
                                    "release_date": "2017-10-27",
                                    "title": "Coco",
                                    "vote_average": 7.7,
                                  }
            }
            onFavorite={[Function]}
/>,
          <MovieCard
            movie={
                        Object {
                                    "backdrop_path": "/def.jpg",
                                    "favorite": true,
                                    "movie_id": 999,
                                    "overview": "Despite his family’s baffling generations-old ban on music",
                                    "poster_path": "/abs.jpg",
                                    "release_date": "2017-10-27",
                                    "title": "Thor",
                                    "vote_average": 7.2,
                                  }
            }
            onFavorite={[Function]}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "354912",
          "nodeType": "function",
          "props": Object {
            "movie": Object {
              "backdrop_path": "/askg3SMvhqEl4OL52YuvdtY40Yb.jpg",
              "favorite": false,
              "movie_id": 354912,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/eKi8dIrr8voobbaGzDpe8w0PVbC.jpg",
              "release_date": "2017-10-27",
              "title": "Coco",
              "vote_average": 7.7,
            },
            "onFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1000",
          "nodeType": "function",
          "props": Object {
            "movie": Object {
              "backdrop_path": "/def.jpg",
              "favorite": true,
              "movie_id": 999,
              "overview": "Despite his family’s baffling generations-old ban on music",
              "poster_path": "/abs.jpg",
              "release_date": "2017-10-27",
              "title": "Thor",
              "vote_average": 7.2,
            },
            "onFavorite": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
